# memFrame

./: .env.example  .gitignore  README.md  mkdocs.yml  pyproject.toml  tox.ini
.githooks/: pre-commit
.github/workflows/: commit-checks.yml  docs.yml
docs/: getting-started.md  index.md
docs/api/: bar.md  bar_polar.md  cleaning.md  connector.md  database.md  inspect.md  line.md  pie.md  scatter.md  scatter3d.md  selection.md  stats.md  upload-manager.md
docs/stylesheets/: extra.css
scripts/: run-commit-checks.sh
src/: main.py  main.pyi
src/core/analytix/: cleaning.py  selection.py  stats.py  table_ops.py
src/core/ingestion/: datatype_detector.py  upload_manager.py
src/core/orchestrator/analytix/: cleaning.py  selection.py  stats.py  table_ops.py
src/core/orchestrator/plots/: bar.py  bar_polar.py  line.py  pie.py  scatter.py  scatter_3d.py
src/core/plots/: bar.py  bar_polar.py  line.py  pie.py  scatter.py  scatter_3d.py
src/db_manager/: context.py  context.pyi  ops.py  setup.py
src/db_manager/adapters/: base.py  clickhouse.py  duckdb.py  factory.py  postgresql.py
src/interfaces/: ops.pyi  selection.pyi  upload.pyi
src/memframe/: __init__.py
src/utils/: async_sync.py  helper.py  method_call_logger.py  plot_renderer.py
src/wrappers/: base.py  ops.py  ops.pyi  upload.py  upload.pyi
src/wrappers/analytix/: cleaning.py  cleaning.pyi  inspect.py  inspect.pyi  selection.py  selection.pyi  stats.py  stats.pyi
src/wrappers/plots/: bar.py  bar.pyi  bar_polar.py  bar_polar.pyi  line.py  line.pyi  pie.py  pie.pyi  scatter.py  scatter.pyi  scatter_3d.py  scatter_3d.pyi
tests/: conftest.py  db_test_utils.py  test_bar.py  test_bar_polar.py  test_cleaning.py  test_inspect.py  test_line.py  test_pie.py  test_scatter.py  test_scatter3d.py  test_selection.py  test_stats.py  test_upload.py
tests/datasets/: sample.csv  sample.parquet
