[project]
name = "memframe"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
authors = [
    { name = "Debojit", email = "debo.mandal95@gmail.com" }
]
requires-python = ">=3.10"
dependencies = [
    "asyncpg==0.30",
    "chardet>=7.4.3",
    "duckdb>=1.0.0",
    "mkdocs-material>=9.7.6",
    "mkdocstrings[python]>=1.0.4",
    "pandas>=2.2,<3.0",
    "psycopg2-binary>=2.9.12",
    "pyarrow>=24.0.0",
    "pydantic>=2.13.4",
]

[dependency-groups]
dev = [
    "pytest>=8.0",
    "tox>=4.0",
]

[tool.pytest.ini_options]
addopts = "-ra"
pythonpath = [
    ".",
]
testpaths = [
    "tests",
]

[build-system]
requires = ["uv_build>=0.11.18,<0.12.0"]
build-backend = "uv_build"
